--- a/client/web-controller/package.json
+++ b/client/web-controller/package.json
@@ -15,6 +15,7 @@
     "prettier": "^2.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "reconnecting-websocket": "^4.4.0",
     "sass": "^1.54.9",
     "socket.io": "^4.5.2",
     "socket.io-client": "^4.5.2"
