--- a/client/web-controller/package.json
+++ b/client/web-controller/package.json
@@ -11,6 +11,10 @@
     "lint:ci": "npx eslint ./"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.9",
     "next": "12.3.0",
     "nipplejs": "^0.9.1",
     "prettier": "^2.7.1",
